test/corpus/definitions/table.txt
====================
Table Definition
====================

Table people {
    id int [pk]
    name varchar
    email varchar(255) [unique]
    date_of_birth date
    created_at timestamp
    updated_at timestamp
}

---

(source_file
    (table_definition
        name: (identifier)
        definition_block: (block
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                )
                modifiers: (modifiers
                    modifier: (modifier
                        name: (word)
                    )
                )
            )
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                )
            )
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                    (number)
                )
                modifiers: (modifiers
                    modifier: (modifier
                        name: (word)
                    )
                )
            )
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                )
            )
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                )
            )
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                )
            )
        )
    )
)

====================
Table Alias
====================

Table people as P {
    id int [pk]
    name varchar
}

---

(source_file
    (table_definition
        name: (identifier)
        alias: (word)
        definition_block: (block
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                )
                modifiers: (modifiers
                    modifier: (modifier
                        name: (word)
                    )
                )
            )
            (column_definition
                column_name: (identifier)
                data_type: (data_type
                    (identifier)
                )
            )
        )
    )
)

====================
Table with schema name
====================

Table default.people as P {
    //
}

---

(source_file
    (table_definition
        schema_name: (identifier)
        name: (identifier)
        alias: (word)
        definition_block: (block
            (comment)
        )
    )
)

